--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -36,6 +36,16 @@ html{
 
 body{
   font:normal 75% Arial, Helvetica, sans-serif;
+  height: 100%;
+    background-color: #ffffff;
+    background-image: url("images/overlay.png"), -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
+    background-image: url("images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
+    background-image: url("images/overlay.png"), -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
+    background-image: url("images/overlay.png"), linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
+    background-repeat: repeat,      no-repeat,      no-repeat;
+    background-size: 100px 100px, cover,        cover;
+    background-position: top left,    center center,    bottom center;
+    background-attachment: fixed,     fixed,        fixed;
 }
 
 canvas{
@@ -112,7 +122,8 @@ canvas{
           position: absolute;
           left: 50%;
           top: 50%;
-          height: 400px;
+          height: 200px;
+          letter-spacing: 5px;
           -webkit-transform: translate(-50%, -50%);
           -moz-transform: translate(-50%, -50%);
           -ms-transform: translate(-50%, -50%);
