--- a/site/static/css/font-awesome.css
+++ b/site/static/css/font-awesome.css
@@ -14,6 +14,7 @@
 .fa {
   color: #999999;
   display: inline-block;
+  text-decoration: none;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
   text-rendering: auto;
